one line css fix
Prevent the blog image from overflowing on the ArticleDetailPage

--- a/src/main/webapp/css/full.css
+++ b/src/main/webapp/css/full.css
@@ -1728,7 +1728,7 @@ div#main_column div#blog_content {
 }
 
 div#main_column img.blog_main_image {
-	float: left;
+	/*float: left;*/
 	margin-bottom: 10px;
 	margin-left: 10px;
 	margin-right: 15px;
